--- a/next/my-app/package.json
+++ b/next/my-app/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "@jup-ag/core": "^1.0.0-beta.11",
     "bs58": "^4.0.1",
+    "isomorphic-fetch": "^3.0.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/bs58": "^4.0.1",
+    "@types/isomorphic-fetch": "^0.0.35",
     "@types/node": "17.0.15",
     "@types/react": "17.0.39",
     "eslint": "8.8.0",
